gatekeeper/constraints/deny-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostNetwork
metadata:
  name: deny-hostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: deny 
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
