gatekeeper/constraints/deny-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatestTag
metadata:
  name: disallow-latest
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: deny 
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - argocd
      - gatekeeper-system
      - external-secrets
      - monitoring
