gatekeeper/constraints/deny-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: deny-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
