gatekeeper/constraints/require-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireLimits
metadata:
  name: require-limits
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: deny 
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
